@startuml "Design Patterns — Partial Design Model"

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontSize 10
skinparam classFontSize 11

title Design Patterns (Partial Design Model)

' --- STATE ---
package "«State Pattern»" #FFF5E0 {
    interface BookingState {
        + getStateName() : String
        + finish(BookingContext) : void
        + cancel(BookingContext) : void
    }

    class BookingContext {
        + setState(BookingState) : void
        + finish() : void
        + cancel() : void
    }

    class ConfirmedState
    class FinishedState
    class CancelledState

    BookingState <|.. ConfirmedState
    BookingState <|.. FinishedState
    BookingState <|.. CancelledState
    BookingContext --> BookingState
}

' --- STRATEGY ---
package "«Strategy Pattern»" #FFF0F0 {
    interface PricingStrategy {
        + calculatePrice(Car, int, LocalDate, LocalTime) : double
    }

    class StandardPricingStrategy
    class WeekendPricingStrategy
    class PeakHourPricingStrategy

    class PricingStrategyFactory {
        + getStrategy(String) : PricingStrategy
    }

    PricingStrategy <|.. StandardPricingStrategy
    PricingStrategy <|.. WeekendPricingStrategy
    PricingStrategy <|.. PeakHourPricingStrategy
    PricingStrategyFactory --> PricingStrategy : creates >
}

' --- OBSERVER ---
package "«Observer Pattern»" #F0F0FF {
    interface BookingObserver {
        + onBookingEvent(BookingEvent) : void
    }

    class BookingEvent {
        - eventType : EventType
        - booking : Booking
    }

    enum EventType {
        CREATED
        FINISHED
        CANCELLED
    }

    class BookingEventPublisher {
        + subscribe(BookingObserver) : void
        + publish(BookingEvent) : void
    }

    class LearnerNotificationObserver
    class ProviderNotificationObserver
    class AnalyticsObserver

    BookingObserver <|.. LearnerNotificationObserver
    BookingObserver <|.. ProviderNotificationObserver
    BookingObserver <|.. AnalyticsObserver
    BookingEventPublisher --> "*" BookingObserver : notifies >
    BookingEvent --> EventType
}

' --- FACTORY ---
package "«Factory Pattern»" #F5F0FF {
    interface UserFactory {
        + createUser() : User
        + getSupportedRole() : String
    }

    class LearnerFactory
    class InstructorFactory
    class CarProviderFactory

    class UserFactoryRegistry {
        + createUser(String role) : User
    }

    UserFactory <|.. LearnerFactory
    UserFactory <|.. InstructorFactory
    UserFactory <|.. CarProviderFactory
    UserFactoryRegistry --> "*" UserFactory : manages >
}

@enduml
